--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "express-handlebars": "^5.2.0",
     "method-override": "^3.0.0",
     "mysql": "^2.18.1"
+  },
+    "production": {
+    "use_env_variable": "JAWSDB_URL",
+    "dialect": "mysql"
   }
 }
