--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
   },
   "homepage": "https://github.com/NhiDanis/Eat-Da-Burger#readme",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
     "method-override": "^3.0.0",
     "mysql": "^2.18.1"
   },
-    "production": {
+  "production": {
     "use_env_variable": "JAWSDB_URL",
     "dialect": "mysql"
   }
